# weather-cli

./: Cargo.toml  README.md
src/: main.rs  weather_data.rs  weather_info.rs
