[package]
name = "weather_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest ={version = "0.12.4", features = ["blocking", "json"]}
serde ={version="1.0", features=["derive"]}
serde_json="1.0"
colored="2.0"
dotenv = "0.15.0"